# ucos_ii-clion

./: .gitignore  CMakeLists.txt  README.md  README_cn.md
Micrium/Software/uC-CPU/Win32/Visual_Studio/: cpu.h  cpu_c.c
Micrium/Software/uCOS-II/Ports/Win32/Visual_Studio/: os_cpu_c.c
Microsoft/Windows/App/: luyouliang.c  luyouliang.h
